--- a/backend/service/pyproject.toml
+++ b/backend/service/pyproject.toml
@@ -1,15 +1,9 @@
-[tool.poetry]
+[project]
 name = "service"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-django = "^5.2.5"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.12"
+dependencies = [
+    "django>=5.2.5",
+]
