fix: try and solve the github workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,6 +82,11 @@ jobs:
         with:
           go-version: '1.21'
       
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+      
       - name: Lint Gateway
         if: hashFiles('backend/gateway/go.mod') != ''
         working-directory: ./backend/gateway
@@ -92,20 +97,6 @@ jobs:
           golangci-lint run
         env:
           GOLANGCI_LINT_VERSION: latest
-      
-      - name: Install golangci-lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-      
-      - name: Lint Real-time Service
-        if: hashFiles('backend/real-time/go.mod') != ''
-        working-directory: ./backend/real-time
-        run: |
-          go mod download
-          go vet ./...
-          go fmt ./...
-          golangci-lint run
 
   lint-rust:
     needs: detect-changes
@@ -182,15 +173,25 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install uv
+        if: hashFiles('backend/service/pyproject.toml') != ''
         uses: astral-sh/setup-uv@v2
       
       - name: Set up Python
+        if: hashFiles('backend/service/pyproject.toml') != ''
         run: uv python install 3.11
       
+      - name: Set up Go
+        if: hashFiles('backend/gateway/go.mod') != ''
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
+      
       - name: Install Rust
+        if: hashFiles('backend/real-time/Cargo.toml') != ''
         uses: dtolnay/rust-toolchain@stable
       
       - name: Set up Node.js
+        if: hashFiles('frontend/package.json') != ''
         uses: actions/setup-node@v4
         with:
           node-version: '18'
@@ -198,15 +199,18 @@ jobs:
 
       
       - name: Test Python Service
+        if: hashFiles('backend/service/pyproject.toml') != ''
         working-directory: ./backend/service
         run: |
           uv sync
           uv run pytest --verbose
       
-      - name: Test Rust Gateway
-        if: hashFiles('backend/gateway/Cargo.toml') != ''
+      - name: Test Go Gateway
+        if: hashFiles('backend/gateway/go.mod') != ''
         working-directory: ./backend/gateway
-        run: cargo test --verbose
+        run: |
+          go mod download
+          go test -v ./...
       
       - name: Test Rust Real-time
         if: hashFiles('backend/real-time/Cargo.toml') != ''
@@ -214,6 +218,7 @@ jobs:
         run: cargo test --verbose
       
       - name: Test Frontend
+        if: hashFiles('frontend/package.json') != ''
         working-directory: ./frontend
         run: |
           pnpm install
