--- a/backend/real-time/dockerfile
+++ b/backend/real-time/dockerfile
@@ -2,9 +2,11 @@ FROM rust
 
 RUN apt update \
 && apt-get update \
-&& apt install build-essential tar wget \
+&& apt install build-essential tar wget -y
 
 COPY . /app
+
+WORKDIR /app
 RUN cargo build 
 
 EXPOSE 5322
