--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,19 +1,18 @@
 FROM node:20
 
 RUN apt-get update && \
-    apt-get install -y build-essential tar wget && \
-    npm install -g pnpm && \
-    rm -rf /var/lib/apt/lists/*
+apt-get install -y build-essential tar wget && \
+npm install -g pnpm && \
+rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY package*.json pnpm-lock.yaml* ./
 
 # Docker file systems cant adapt to symlinks
-RUN pnpm install --shamefully-hoist --store-dir ./node_modules/.pnpm-store
+# RUN pnpm install --shamefully-hoist --store-dir ./node_modules/.pnpm-store
+RUN pnpm install -f --prefer-offline --package-import-method=hardlink 
 
 COPY . .
 
 EXPOSE 5173
 CMD ["pnpm", "run", "dev"]
-
-
