--- a/backend/gateway/dockerfile
+++ b/backend/gateway/dockerfile
@@ -1,17 +1,19 @@
-FROM golang
-
-RUN apt update \
-&& apt-get update \
-&& apt install build-essential tar wget -y
-
-COPY . /app
+FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
-RUN go mod init github.com/includecctype/devnetwork-hackathon \
-&& go get github.com/gin-gonic/gin 
 
-EXPOSE 5321
-CMD ["go", "run", "main.go"]
+COPY go.mod go.sum ./
+
+RUN go mod download
+
+COPY . .
+
+RUN go build -o main .
+
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/main .
+CMD ["./main"]
 
 
 
