--- a/backend/real-time/Cargo.toml
+++ b/backend/real-time/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-socketioxide = "*"
+socketioxide = "^0.17.0"
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+axum = "^0.8.4"
+reqwest = { version = "0.12", 
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
