chore: configure docker compose, clearer readme instruction

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,5 +33,9 @@ services:
       - ./frontend/.env
     volumes:
       - ./frontend:/api
+    depends_on:
+      - gateway
+      - real-time
+      - service
   
 
